fixed extra space html

--- a/style/main.css
+++ b/style/main.css
@@ -31,7 +31,7 @@ body {
     color: var(--colors-primary);
     padding: var(--space-3) 0 var(--space-7);
     margin: 0 var(--space-5) 0 var(--space-6);
-    height: 100%;
+    height: 100vh;
     /* border-right: 1px solid var(--colors-primary);*/ 
 }
 
